# tpp

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  tpp.fish
docs/: DESIGN.md  sf-auto-mux.md
src/: cli.rs  config.rs  lib.rs  main.rs  output.rs  paths.rs  scope.rs  session.rs  store.rs  tmux.rs  watch.rs
src/commands/: compat.rs  io.rs  lifecycle.rs  meta.rs  mod.rs  pane.rs  select.rs
tests/: cli.rs
